[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.1"
log = "0.4"
libhrstd = { path = "../../rust-roottask/ws/libhrstd", default-features = false, features = ["foreign_rust_rt"] }

# this will be my benchmark; maximum performance
[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# Changes for maximum performance: only differences to default settings
codegen-units = 1 # maximum performance in final binary
lto = true # maximum performance in final binary
