[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libhedron = { path = "../../rust-roottask/ws/libhedron" }
# exclude "rt" feature
libhrstd = { path = "../../rust-roottask/ws/libhrstd", default-features = false, features = ["foreign_rust_rt"] }
simple_logger = "2.1.0"
log = "0.4.14"
