[package]
name = "libroottask"
description = "All functionality of the roottask that should be testable."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhrstd = { path = "../libhrstd", default-features = false } # for mutex; libhedron is transitive dep
libfileserver = { path = "../libfileserver" } # currently, the file service lives inside the roottask

log = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }
x86 = "0.46"
bitflags = "1.3"
enum-iterator = "0.7"
tar-no-std = { version = "0.1", features = ["alloc"] }
# tar-no-std = { path = "../../../../dev/tar-no_std", features = ["alloc"] }
runs_inside_qemu = "1.1"
# runs_inside_qemu = { path = "/home/pschuster/dev/runs-inside-qemu" }
elf_rs = "0.2"
# linux-libc-auxv = { path = "../../../../dev/libc-auxv" }
linux-libc-auxv = "0.2"
# pinned because of: https://github.com/phip1611/diplomarbeit-impl/issues/4
uart_16550 = "=0.2.16"
