[package]
name = "roottask-bin"
description = "The roottask that initialized the hrstd, the Hedron Rust Standard Environment."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhrstd = { path = "../libhrstd", default-features = false }
libroottask = { path = "../libroottask" }
# required for benchmarking withing the roottask
libfileserver = { path ="../libfileserver" }
runs_inside_qemu = "1.1"
log = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }
simple-chunk-allocator = { git = "https://github.com/phip1611/simple-chunk-allocator.git", branch = "main" }
# simple-chunk-allocator = { path = "../../../../dev/simple-chunk-allocator" }

[profile.dev]
# Significantly reduces redicously high stack usage by the binary.
# This led to long debugging sessions in memory bugs in the portal exception handler,
# until I figured out, it is caused by a stack memory overrun.
opt-level = 1

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# Changes for maximum performance: only differences to default settings
codegen-units = 1
lto = true
