[package]
name = "fileserver-bin"
description = "All functionality of the roottask that should be testable. Only required by the roottask."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhrstd = { path = "../libhrstd" }

[profile.dev]
# Significantly reduces redicously high stack usage by the binary.
opt-level = 1

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# Changes for maximum performance: only differences to default settings
codegen-units = 1
lto = true
