[package]
name = "helloworld-bin"
description = "A native Hedron app that runs on top of hrstd and works as testing playground."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhrstd = { path = "../libhrstd" }
log = { version = "0.4", default-features = false }

[profile.dev]
# Significantly reduces redicously high stack usage by the binary.
opt-level = 1
