[package]
name = "libhedron"
description = "Type definitions and low-level system call wrappers for Hedron."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
enum-iterator = "0.7"
log = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }

# https://serde.rs/no-std.html
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # utcb data serialization
postcard = "0.7" # utcb data serialization
