[package]
name = "libroottask"
description = "All functionality of the roottask that should be testable."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhedron = { path = "../libhedron" }
libhrstd = { path = "../libhrstd" } # for mutex

log = { version = "0.4", default-features = false }
# mathematic operations, like sinus and logarithm
libm = "0.2"
x86 = "0.41"
bitflags = "1.3"
enum-iterator = "0.7"
tar-no-std = "0.1"
