[package]
name = "libroottask"
description = "All functionality of the roottask that should be testable."
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false # prevent accidentaly publishing

[dependencies]
libhrstd = { path = "../libhrstd" } # for mutex; libhedron is transitive dep

log = { version = "0.4", default-features = false }
x86 = "0.41"
bitflags = "1.3"
enum-iterator = "0.7"
tar-no-std = { version = "0.1", features = ["alloc"] }
# tar-no-std = { path = "../../../../dev/tar-no_std", features = ["alloc"] }
